# payment-engine

./: Cargo.toml  README.md
src/: account.rs  lib.rs  main.rs  operation.rs  payment.rs
src/account/: error.rs  store.rs
src/operation/: error.rs  transaction_store.rs
src/payment/: error.rs  processor.rs
tests/: integration_tests.rs
tests/test_cases/basic/: input.csv  output.csv
tests/test_cases/decimal_places/: input.csv  output.csv
tests/test_cases/flow/: input.csv  output.csv
