[package]
name = "payment-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
crossbeam = { version = "0.8", default-features = false, features = ["std"] }
csv = { version = "1.3", default-features = false }
dashmap = { version = "6.1", default-features = false }
derive_more = { version = "2.0", default-features = false, features = ["from", "into_iterator"]}
rust_decimal = { version = "1.38", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"]}
thiserror = {version = "2.0", default-features = false, features = ["std"] }

[dev-dependencies]
itertools = { version = "0.14", default-features = false, features = ["use_std"]}
rand = { version = "0.9", default-features = false, features = ["std", "thread_rng"] }
